--- a/index.css
+++ b/index.css
@@ -1,10 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;900&display=swap");
+@import "reset.css";
+
+.js-toDoForm,
+.js-weather,
+.js-clock,
 .form,
 .greeting {
   display: none;
 }
+.js-toDoForm :nth-child(2) {
+  text-align: center;
+  color: white;
+}
 
+.js-weather {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 .showing {
   display: block;
+  animation: fadeIn 2s ease-in-out;
 }
 body {
   background-color: #2c3e50;
@@ -13,6 +29,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Epilogue", sans-serif;
+  font-weight: 400;
+  text-shadow: 2px 2px 4px gray;
+  text-align: center;
 }
 
 .bgImg {
@@ -24,6 +44,11 @@ body {
   z-index: -1;
   animation: fadeIn 2s ease-in-out;
 }
+
+.js-form {
+  animation: fadeIn 2s ease-in-out;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
