--- a/index.css
+++ b/index.css
@@ -8,10 +8,6 @@
 .greeting {
   display: none;
 }
-.js-toDoForm :nth-child(2) {
-  text-align: center;
-  color: white;
-}
 
 .js-weather {
   position: absolute;
@@ -25,16 +21,65 @@
 body {
   background-color: #2c3e50;
   color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-family: "Epilogue", sans-serif;
   font-weight: 400;
   text-shadow: 2px 2px 4px gray;
   text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.js-clock {
+  font-size: 122px;
+  font-weight: 900;
+  margin-top: 20%;
 }
 
+.greeting {
+  font-weight: 500;
+  font-size: 64px;
+}
+
+.js-toDoForm {
+  margin-top: 75px;
+}
+.js-toDoForm__Question {
+  font-size: 32px;
+}
+.js-toDoForm :nth-child(2) {
+  text-align: center;
+  color: white;
+  width: 500px;
+  font-weight: 500;
+  font-size: 50px;
+}
+
+.js-toDoList li {
+  position: relative;
+  font-size: 20px;
+  margin-top: 10px;
+}
+.js-todoList fa-check {
+  position: absolute;
+  left: 15px;
+}
+.js-toDoList button {
+  padding: 3px 7px;
+  color: white;
+  font-weight: 900;
+  background-color: transparent;
+  background-image: none;
+  border-color: transparent;
+  border: 1px solid white;
+  border-radius: 50%;
+  outline: 0;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.js-toDoList i {
+  margin-right: 15px;
+  cursor: pointer;
+}
 .bgImg {
   position: absolute;
   top: 0;
