--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@
 @import "reset.css";
 
 .js-toDoForm,
-.js-weather,
 .js-clock,
 .form,
 .greeting {
@@ -10,9 +9,25 @@
 }
 
 .js-weather {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  animation: fadeIn 2s ease-in-out;
+}
+.js-weather__column {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+.js-weather__icon {
+  margin-bottom: 3px;
+}
+.js-weather__span2 {
+  font-size: 34px;
+}
+.js-weather__span3 {
+  margin-top: 3px;
 }
 .showing {
   display: block;
@@ -31,7 +46,7 @@ body {
 .js-clock {
   font-size: 122px;
   font-weight: 900;
-  margin-top: 20%;
+  margin-top: 15%;
 }
 
 .greeting {
@@ -92,6 +107,17 @@ body {
 
 .js-form {
   animation: fadeIn 2s ease-in-out;
+}
+.js-form h6 {
+  font-size: 50px;
+  margin-top: 15%;
+}
+.js-form input {
+  text-align: center;
+  color: white;
+  width: 500px;
+  font-weight: 500;
+  font-size: 50px;
 }
 
 @keyframes fadeIn {
