--- a/index.css
+++ b/index.css
@@ -8,6 +8,14 @@
   display: none;
 }
 
+.none {
+  opacity: 0;
+}
+li i {
+  position: absolute;
+  left: 30%;
+}
+
 .js-weather {
   display: flex;
   flex-direction: row;
@@ -22,6 +30,7 @@
 }
 .js-weather__icon {
   margin-bottom: 3px;
+  font-size: 34px;
 }
 .js-weather__span2 {
   font-size: 34px;
@@ -31,7 +40,7 @@
 }
 .showing {
   display: block;
-  animation: fadeIn 2s ease-in-out;
+  animation: fadeIn 1s ease-in-out;
 }
 body {
   background-color: #2c3e50;
@@ -72,11 +81,10 @@ body {
   position: relative;
   font-size: 20px;
   margin-top: 10px;
+  color: white;
+  animation: fadeIn 1s ease-in-out;
 }
-.js-todoList fa-check {
-  position: absolute;
-  left: 15px;
-}
+
 .js-toDoList button {
   padding: 3px 7px;
   color: white;
